--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-/*block*/
-
 body {
   margin: 0;
   font-family: DOS, Monaco, Menlo, Consolas, "Courier New", monospace;
@@ -21,8 +19,6 @@ body {
 
 /*chat*/
 
-/*block*/
-
 .Chat {
   width: 50vw;
   padding: 10px;
@@ -34,6 +30,16 @@ body {
 .Chat header {
   height: 30px;
   margin-bottom: 10px;
+}
+
+.Chat-header-left,
+.Chat-header-left img,
+.Chat-header-left .Chat-header-left-logotext {
+  float: left;
+}
+
+.Chat-header-right {
+  float: right;
 }
 
 .Chat-is-connected {
@@ -97,6 +103,7 @@ body {
 .Chat-code-meta li a {
   text-decoration: none;
   color: #0170f8;
+  cursor: pointer;
 }
 
 .Chat-code-meta li img {
@@ -107,6 +114,7 @@ body {
 
 .Chat-code-verification {
   color: #ff0000;
+  margin-bottom: 10px;
 }
 
 .Chat-message {
@@ -146,13 +154,16 @@ body {
   background-color: #f1f7fb;
   color: #000000;
   border: 4px solid #b5cadf;
-  width: calc(100% - 140px);
+  width: calc(100% - 153px);
+  border-radius: 0;
+  outline: none;
+  padding-left: 10px;
 }
 
 .Chat-controls button {
   display: block;
   float: left;
-  margin: 0px 0px 0px 5px;
+  margin: 0px 0px 0px 10px;
   padding: 4px 30px 0px 30px;
   border: 4px solid #b5cadf;
 }
@@ -163,14 +174,72 @@ body {
   margin-right: 10px;
 }
 
-/*modifiers*/
-
-.Chat-header-left,
-.Chat-header-left img,
-.Chat-header-left .Chat-header-left-logotext {
-  float: left;
+@media only screen and (max-width: 780px) {
+  .Chat-header-connect-feedback {
+    display: none;
+  }
 }
 
-.Chat-header-right {
-  float: right;
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 20px;
+  }
+
+  /*begin */
+  /*  .Chat header {
+    margin-top: 0px !important;
+    padding-top: 10px;
+  }
+
+  .Chat header {
+    height: 30px;
+    margin-bottom: 0px;
+
+    padding-bottom: 10px;
+  }
+
+  header {
+    position: fixed;
+    width: 100%;
+    background: #306ff9;
+  }
+*/
+  /*end*/
+
+  .Chat {
+    padding-top: 0;
+    height: calc(100vh - 10px);
+    width: 100vw;
+  }
+
+  .Chat header {
+    margin-top: 10px;
+  }
+
+  .Chat-inner {
+    height: calc(100vh - 120px);
+  }
+
+  .Chat-controls textarea {
+    float: left;
+    /*width: calc(100% - 142px);*/
+    width: calc(100% - 152px);
+  }
+}
+
+/*animation*/
+
+.animate {
+  animation-iteration-count: 6;
+  animation-timing-function: step-end;
+  animation-name: anim-half;
+  animation-duration: 0.15s;
+  animation-direction: alternate;
+}
+
+@keyframes anim-half {
+  50% {
+    background-color: #f0f0f0;
+    border-color: #e50000;
+  }
 }
