--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,7 @@ body {
   margin: 0px 0px 0px 10px;
   padding: 4px 30px 0px 30px;
   border: 4px solid #b5cadf;
+  background: #fff;
 }
 
 .Swapchat-logo {
@@ -181,13 +182,19 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  html,
+  body {
+    position: fixed;
+    overflow: hidden;
+  }
+
   body {
     font-size: 20px;
   }
 
-  /*begin */
-  /*  .Chat header {
+  .Chat header {
     margin-top: 0px !important;
+    padding-left: 0px !important;
     padding-top: 10px;
   }
 
@@ -203,8 +210,24 @@ body {
     width: 100%;
     background: #306ff9;
   }
-*/
-  /*end*/
+
+  .Chat .Chat-controls {
+    margin-top: 0px !important;
+    padding-top: 10px;
+  }
+
+  .Chat .Chat-controls {
+    height: 30px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+
+  .Chat-controls {
+    position: fixed;
+    width: 100%;
+    background: #306ff9;
+    bottom: 0;
+  }
 
   .Chat {
     padding-top: 0;
@@ -217,13 +240,13 @@ body {
   }
 
   .Chat-inner {
-    height: calc(100vh - 120px);
+    margin-top: 50px;
+    height: calc(100vh - 232px);
   }
 
   .Chat-controls textarea {
     float: left;
-    /*width: calc(100% - 142px);*/
-    width: calc(100% - 152px);
+    width: calc(100% - 171px);
   }
 }
 
